# papertrail

./: README.md  application.py  classes.py  pyproject.toml  requirements.txt  shell.nix  test.py
frontend/: application.html  grid.css  style.css
src/papertrail/: drivertest.py  papertraildocument.py  papertraildriver.py  test.py
tests/: test_papertraildriver.py
