[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papertrail"
version = "0.0.1"
authors = [
  { name="Sohal Sudheer", email="ssudheer@gmu.edu" }
]
description = "The papertrail module provides functionality to create and read PaperTrail Documents, a way to encrypt and print data onto paper"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "cffi >= 1.16.0",
  "cryptography >= 42.0.5",
  "defusedxml >= 0.7.1",
  "fonttools >= 4.50.0",
  "fpdf2 >= 2.7.8",
  "friendlywords >= 1.1.3",
  "pdf2image >= 1.17.0",
  "pillow >= 10.2.0",
  "pycparser >= 2.22",
  "pypng >= 0.20220715.0",
  "pyzbar >= 0.1.9",
  "qrcode >= 7.4.2",
  "typing_extensions >= 4.10.0"
]

[project.urls]
"Source" = "https://github.com/papertrail-app/papertrail"
"Homepage" = "https://github.com/papertrail-app"
"Bug Tracker" = "https://github.com/papertrail-app/papertrail/issues"
